# mini-clock

./: CMakeLists.txt  README.md  TC.cmake  linker_script.ld
hal/: CMakeLists.txt
hal/hal/: CMakeLists.txt  gpio.c  gpio.h  i2c.c  i2c.h  rtc.c  rtc.h
src/: CMakeLists.txt  main.c
src/dev/: CMakeLists.txt  display.c  display.h  sht45.c  sht45.h
